# Lod

Lod/: BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Lod/examples/: run_example.bat  run_example.sh  run_example_geometric.bat  run_example_single.bat  sample_input.txt  sample_input_geometric.txt
Lod/src/: CMakeLists.txt
Lod/src/app/: main.cpp
Lod/src/core/: Expected.hpp  Geometry.cpp  Geometry.hpp  LodAlgorithm.cpp  LodAlgorithm.hpp  Mesh.cpp  Mesh.hpp  Types.hpp
Lod/src/geo/: CRS.cpp  CRS.hpp  GeoBBox.cpp  GeoBBox.hpp
Lod/src/io/: OsgExporter.cpp  OsgExporter.hpp  PlyReader.cpp  PlyReader.hpp  TilesExporter.cpp  TilesExporter.hpp
Lod/src/pipeline/: LodPipeline.cpp  LodPipeline.hpp
Lod/tests/: CMakeLists.txt  test_geobbox.cpp  test_geometry.cpp  test_lod_algorithm.cpp  test_main.cpp  test_mesh.cpp  test_pipeline.cpp
